test/org/midica/testfiles/failing/instrument-not-enough-args.midica
INCLUDE inc/instruments.midica

INSTRUMENT 0

